--- a/manifest.yml
+++ b/manifest.yml
@@ -3,5 +3,6 @@ applications:
  - name: movies-reviews-database-56b
    random-route: false
    memory: 128M
-   services: 
-- cloudappdevs-cloudant
+   services:
+-cloudappdevs-cloudant
+-cloudappdevs-nlu
