--- a/manifest.yml
+++ b/manifest.yml
@@ -1,7 +1,7 @@
 ---
+services:
+- cloudappdevs-cloudant
 applications:
  - name: movies-reviews-database-56b
    random-route: false
    memory: 128M
-services:
-- name: cloudappdevs-cloudant
